docs/7.52/md/abennews-751-others.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 7.5x](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-75.htm) →  [Changes in Release 7.51](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-751.htm) → 

Further Changes in Release 7.51

[1\. Full text search in the SAP GUI version of the ABAP keyword documentation](#!ABAP_MODIFICATION_1@1@)

[2\. Static ABAP with restricted object use](#!ABAP_MODIFICATION_2@2@)

Modification 1

Full Text Search in the SAP GUI version of the ABAP Keyword Documentation

Double quotation marks (") can now be used in the input field of the documentation display in the SAP GUI VERSION of the ABAP keyword documentation to force a full text search for a search term. Up until now, the full text search was only available by choosing radio buttons in the dialog box of the documentation.

Modification 2

Static ABAP with Restricted Object Use

In Release 7.51, a new [ABAP version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_version_glosry.htm "Glossary Entry") [Static ABAP with Restricted Object Use](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_for_cloud_dev_glosry.htm "Glossary Entry") was introduced. The internal version ID in column UCCHECK of system table TRDIR is "3".