docs/7.57/md/abennews-751-others.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-75.htm) →  [News for Release 7.51](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-751.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Further Changes in Release 7.51, ABENNEWS-751-OTHERS, 757%0D%0A%0D%0AError:%0D%0A%0D%
0A%0D%0A%0D%0ASuggestion for improvement:)

Further Changes in Release 7.51

[1\. Full Text Search in the SAP GUI Version of the ABAP Keyword Documentation](#!ABAP_MODIFICATION_1@1@)
[2\. Static ABAP with restricted object use](#!ABAP_MODIFICATION_2@2@)

Modification 1   

Full Text Search in the SAP GUI Version of the ABAP Keyword Documentation

Double quotation marks (") can now be used in the input field of the documentation display in the SAP GUI version of the ABAP keyword documentation to force a full text search for a search term. Up until now, the full text search was only available by choosing radio buttons in the dialog box of the documentation.

Modification 2   

Static ABAP with restricted object use

In Release 7.51, a new [ABAP version](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_version_glosry.htm "Glossary Entry") [Static ABAP with Restricted Object Use](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_static_restr_glosry.htm "Glossary Entry") was introduced. The internal version ID in column UCCHECK of system table TRDIR is 3.